tests/snapshots/cmd_generate__cmd_generate::multi_file_import-generated.snap
---
source: tests/cmd_generate.rs
expression: value
---
--- .github/workflows/generated_ci.yaml ---
name: CI
on:
  push:
    branches:
    - main
  pull_request:
    branches:
    - main
jobs:
  test:
    name: Test
    runs-on: ubuntu-latest
    steps:
    - id: __step_0
      run: cargo test --all-features
