tests/snapshots/cmd_generate__cmd_generate::pins_actions_to_lockfile_sha-generated.snap
---
source: tests/cmd_generate.rs
expression: value
---
--- .github/workflows/generated_ci.yaml ---
name: CI
on:
  push:
    branches:
    - main
jobs:
  build:
    name: Build
    runs-on: ubuntu-latest
    steps:
    - id: __step_0
      uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683
    - id: __step_1
      run: echo hello
