tests/snapshots/cmd_generate__cmd_generate::pins_actions_to_lockfile_sha-output.snap
---
source: tests/cmd_generate.rs
expression: value
---
exit_code: 0
---stderr---
  Evaluating workflow definitions
       Wrote .github/workflows/generated_ci.yaml
    Finished generated 1 workflow in [TIME]
