tests/snapshots/cmd_generate__cmd_generate::simple_workflow-generated.snap
---
source: tests/cmd_generate.rs
expression: value
---
--- .github/workflows/generated_ci.yaml ---
name: CI
on:
  push:
    branches:
    - main
jobs:
  build:
    name: Build
    runs-on: ubuntu-latest
    steps:
    - id: __step_0
      run: echo hello
