tests/snapshots/cmd_generate__cmd_generate::simple_workflow-output.snap
---
source: tests/cmd_generate.rs
expression: value
---
exit_code: 0
---stderr---
    Checking workflow definitions
  Evaluating workflow definitions
       Wrote .github/workflows/generated_ci.yaml
    Finished generated 1 workflow in [TIME]
