tests/snapshots/cmd_generate__concurrency_rejects_needs.snap
---
source: tests/cmd_generate.rs
expression: output
---
exit_code: 1
---stderr---
  Evaluating workflow definitions
Error: 
  x context 'needs' is not available in 'concurrency' (available: github, inputs, vars)
  | 
  | Stack trace:
  |     at get (eval_script:44:96)
  |     at concurrency (.github/ghat/workflows/bad.ts:3:1)
  |     at resolve_value (eval_script:64:41)
  |     at workflow (eval_script:448:51)
  |     at <anonymous> (.github/ghat/workflows/bad.ts:2:6)
  |
