tests/snapshots/cmd_generate__context_proxy_direct_return.snap
---
source: tests/cmd_generate.rs
expression: p.generate_snapshot(&output)
---
exit_code: 0
---stderr---
    Checking workflow definitions
  Evaluating workflow definitions
       Wrote .github/workflows/generated_ci.yaml
    Finished generated 1 workflow in [TIME]
--- .github/ghat/workflows/ci.ts ---
workflow("CI", {
  on: triggers({ push: ["main"] }),
  jobs(ctx) {
    ctx.job("Test", {
      // Direct return of proxy should produce ${{ matrix.runner }}, not ${{ matrix.runner.toJSON }}
      runs_on: (ctx) => ctx.matrix.runner,
      strategy: matrix({
        runner: ["ubuntu-latest", "macos-latest"],
      }),
      steps(ctx) {
        run("echo hello")
      }
    })
  }
})
--- .github/workflows/generated_ci.yaml ---
# Do not edit: this file is generated by `ghat generate`.
name: CI
on:
  push:
    branches:
    - main
jobs:
  test:
    name: Test
    runs-on: ${{ matrix.runner }}
    strategy:
      matrix:
        runner:
        - ubuntu-latest
        - macos-latest
    steps:
    - id: step_0
      run: echo hello
