tests/snapshots/cmd_generate__job_and_step_features.snap
---
source: tests/cmd_generate.rs
expression: p.generate_snapshot(&output)
---
exit_code: 0
---stderr---
  Evaluating workflow definitions
       Wrote .github/workflows/generated_needs_and_outputs.yaml
       Wrote .github/workflows/generated_context_proxies.yaml
       Wrote .github/workflows/generated_step_outputs.yaml
       Wrote .github/workflows/generated_run_options.yaml
       Wrote .github/workflows/generated_deploy_context.yaml
    Finished generated 5 workflows in [TIME]
--- .github/ghat/workflows/features.ts ---

// --- job needs, outputs, name normalization, if, env, timeout ---
workflow("Needs And Outputs", {
  on: triggers({ push: ["main"] }),
  jobs(ctx) {
    const build = ctx.job("Build Artifacts", {
      runs_on: "ubuntu-latest",
      steps() {
        run("cargo build --release")
        return { artifact: "build.tar.gz", version: "1.0.0" }
      }
    })

    ctx.job("Deploy To Production", {
      runs_on: "ubuntu-latest",
      needs: [build],
      if: (ctx) => `\${{ needs.build_artifacts.result == 'success' }}`,
      env: (ctx) => ({ VERSION: `${ctx.needs.build_artifacts.outputs.version}` }),
      timeout_minutes: 30,
      steps(ctx) {
        run(`echo deploying ${ctx.needs.build_artifacts.outputs.artifact}`)
      }
    })
  }
})

// --- step context proxies (github, runner, secrets) ---
workflow("Context Proxies", {
  on: triggers({ push: ["main"] }),
  jobs(ctx) {
    ctx.job("Test", {
      runs_on: "ubuntu-latest",
      steps(ctx) {
        run(`echo sha=${ctx.github.sha} runner=${ctx.runner.os} secret=${ctx.secrets.TOKEN}`)
      }
    })
  }
})

// --- step output proxy (uses return -> steps.X.outputs.Y) ---
workflow("Step Outputs", {
  on: triggers({ push: ["main"] }),
  jobs(ctx) {
    ctx.job("Test", {
      runs_on: "ubuntu-latest",
      steps() {
        const co = uses("actions/checkout")
        run(`echo checked out ${co.outputs.ref}`)
      }
    })
  }
})

// --- run step options ---
workflow("Run Options", {
  on: triggers({ push: ["main"] }),
  jobs(ctx) {
    ctx.job("Test", {
      runs_on: "ubuntu-latest",
      steps() {
        run("echo hello")
        run("cargo test", {
          name: "Run tests",
          shell: "bash",
          working_directory: "./crates",
          env: { RUST_LOG: "debug" },
          timeout_minutes: 30,
          continue_on_error: true,
          if: "always()",
        })
      }
    })
  }
})

// --- workflow-level context functions (run_name, concurrency, env) ---
workflow("Deploy Context", {
  on: triggers({
    workflow_dispatch: {
      inputs: {
        env: input("choice", {
          options: ["staging", "production"],
          required: true,
        }),
      }
    }
  }),
  run_name: (ctx) => `Deploy to ${ctx.inputs.env}`,
  concurrency: (ctx) => ({ group: `deploy-${ctx.github.ref}`, cancel_in_progress: true }),
  env: (ctx) => ({ TOKEN: `${ctx.secrets.GITHUB_TOKEN}` }),
  jobs(ctx) {
    ctx.job("Deploy", {
      runs_on: "ubuntu-latest",
      steps() { run("echo deploy") }
    })
  }
})
--- .github/workflows/generated_context_proxies.yaml ---
# Do not edit: this file is generated by `ghat generate`.
name: Context Proxies
on:
  push:
    branches:
    - main
jobs:
  test:
    name: Test
    runs-on: ubuntu-latest
    steps:
    - id: step_0
      run: echo sha=${{ github.sha }} runner=${{ runner.os }} secret=${{ secrets.TOKEN }}
--- .github/workflows/generated_deploy_context.yaml ---
# Do not edit: this file is generated by `ghat generate`.
name: Deploy Context
run-name: Deploy to ${{ inputs.env }}
on:
  workflow_dispatch:
    inputs:
      env:
        type: choice
        required: true
        options:
        - staging
        - production
env:
  TOKEN: ${{ secrets.GITHUB_TOKEN }}
concurrency:
  group: deploy-${{ github.ref }}
  cancel-in-progress: true
jobs:
  deploy:
    name: Deploy
    runs-on: ubuntu-latest
    steps:
    - id: step_0
      run: echo deploy
--- .github/workflows/generated_needs_and_outputs.yaml ---
# Do not edit: this file is generated by `ghat generate`.
name: Needs And Outputs
on:
  push:
    branches:
    - main
jobs:
  build_artifacts:
    name: Build Artifacts
    runs-on: ubuntu-latest
    outputs:
      artifact: build.tar.gz
      version: 1.0.0
    steps:
    - id: step_0
      run: cargo build --release
  deploy_to_production:
    name: Deploy To Production
    runs-on: ubuntu-latest
    needs:
    - build_artifacts
    if: ${{ needs.build_artifacts.result == 'success' }}
    env:
      VERSION: ${{ needs.build_artifacts.outputs.version }}
    timeout-minutes: 30
    steps:
    - id: step_0
      run: echo deploying ${{ needs.build_artifacts.outputs.artifact }}
--- .github/workflows/generated_run_options.yaml ---
# Do not edit: this file is generated by `ghat generate`.
name: Run Options
on:
  push:
    branches:
    - main
jobs:
  test:
    name: Test
    runs-on: ubuntu-latest
    steps:
    - id: step_0
      run: echo hello
    - id: step_1
      name: Run tests
      run: cargo test
      shell: bash
      working-directory: ./crates
      env:
        RUST_LOG: debug
      if: always()
      timeout-minutes: 30
      continue-on-error: true
--- .github/workflows/generated_step_outputs.yaml ---
# Do not edit: this file is generated by `ghat generate`.
name: Step Outputs
on:
  push:
    branches:
    - main
jobs:
  test:
    name: Test
    runs-on: ubuntu-latest
    steps:
    - id: step_0
      uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683
    - id: step_1
      run: echo checked out ${{ steps.step_0.outputs.ref }}
