tests/snapshots/cmd_generate__js_workflow_with_type_annotations.snap
---
source: tests/cmd_generate.rs
expression: output
---
exit_code: 1
---stderr---
    Checking workflow definitions
  Evaluating workflow definitions
Error: 
  x Unexpected token ':'
  | 
  | Stack trace:
  |     at .github/ghat/workflows/ci.js:1:9
  |
